<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_orders_24dp"
        android:title="@string/title_orders" />

    <item
        android:id="@+id/navigation_shopping_cart"
        android:icon="@drawable/ic_shopping_cart_24dp"
        android:title="@string/title_shopping_cart" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_24dp"
        android:title="@string/title_profile" />

</menu>